--- a/052_Mapping_Analysis/45_Mapping.asciidoc
+++ b/052_Mapping_Analysis/45_Mapping.asciidoc
@@ -170,7 +170,7 @@ Elasticsearch 根据我们索引的文档，为((("properties")))域(称为 _属
 
 我们可以更新一个映射来添加一个新域，但不能将一个存在的域从 `analyzed` 改为 `not_analyzed` 。
 
-为了描述指定映射的两种方式，我们先删除 `gd` 索引：
+为了描述指定映射的两种方式，我们先删除 `gb` 索引：
 
 [source,sh]
 --------------------------------------------------
